--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,7 +1,7 @@
 /*===== GOOGLE FONTS =====*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-/*===== VARIABLES CSS =====*/
+/*===== VARIABLES SCSS =====*/
 :root {
     --header-height: 3rem;
     --font-semi: 600;
