--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -1,404 +1,524 @@
 /*===== GOOGLE FONTS =====*/
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
 
-/*===== VARIABLES SCSS =====*/
-:root {
-    --header-height: 3rem;
+/*===== VARIABLES CSS =====*/
+--header-height: 3rem;
     --font-semi: 600;
+
+    /*===== Colores =====*/
+    /*Purple 260 - Red 355 - Blue 224 - Pink 340*/
+    /* HSL color mode */
     --hue-color: 224;
     --first-color: hsl(var(--hue-color), 89%, 60%);
     --second-color: hsl(var(--hue-color), 56%, 12%);
+
+    /*===== Fuente y tipografia =====*/
     --body-font: 'Poppins', sans-serif;
+
     --big-font-size: 2rem;
     --h2-font-size: 1.25rem;
     --normal-font-size: .938rem;
     --smaller-font-size: .75rem;
+
+    /*===== Margenes =====*/
     --mb-2: 1rem;
     --mb-4: 2rem;
     --mb-5: 2.5rem;
     --mb-6: 3rem;
+
+    /*===== z index =====*/
     --z-back: -10;
     --z-fixed: 100;
-}
 
-/*===== MEDIA QUERIES =====*/
-@media screen and (min-width: 968px) {
-    :root {
+    @media screen and (min-width: 968px){
         --big-font-size: 3.5rem;
         --h2-font-size: 2rem;
         --normal-font-size: 1rem;
         --smaller-font-size: .875rem;
-    }
-}
-
-@media screen and (max-width: 320px) {
-    .home {
-        row-gap: 2rem;
-        &__img {
-            width: 200px;
-        }
-    }
-}
-
-@media screen and (min-width: 576px) {
-    .home {
-        padding: 4rem 0 2rem;
-        &__social {
-            padding: 0 0 2.5rem;
-            flex-direction: row;
-            align-self: flex-end;
-            &-icon {
-                margin: 0 var(--mb-4);
-            }
-        }
-        &__img {
-            width: 300px;
-            bottom: 25%;
-        }
-    }
-    .about__container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        align-items: center;
-        text-align: initial;
-    }
-    .skills__container {
-        display: grid;
-        grid-template-columns: .7fr;
-        justify-content: center;
-        column-gap: 1rem;
-    }
-    .work__container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        column-gap: 2rem;
-        padding-top: 2rem;
-    }
-    .contact {
-        &__form {
-            width: 360px;
-            padding-top: 2rem;
-        }
-        &__container {
-            justify-items: center;
-        }
-    }
-}
-
-@media screen and (min-width: 768px) {
-    body {
-        margin: 0;
-    }
-    .section {
-        padding-top: 4rem;
-        padding-bottom: 3rem;
-    }
-    .section-title {
-        margin-bottom: var(--mb-6);
-        &::after {
-            width: 80px;
-            top: 3rem;
-        }
-    }
-    .nav {
-        height: calc(var(--header-height) + 1.5rem);
-        &__list {
-            display: flex;
-            padding-top: 0;
-        }
-        &__item {
-            margin-left: var(--mb-6);
-            margin-bottom: 0;
-        }
-        &__toggle {
-            display: none;
-        }
-        &__link {
-            color: var(--second-color);
-        }
-    }
-    .home {
-        padding: 8rem 0 2rem;
-        &__img {
-            width: 400px;
-            bottom: 10%;
-        }
-    }
-    .about {
-        &__container {
-            padding-top: 2rem;
-        }
-        &__img {
-            & img {
-                width: 300px;
-            }
-        }
-    }
-    .skills__container {
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        column-gap: 2rem;
-        align-items: center;
-        text-align: initial;
-    }
-    .work__container {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        column-gap: 2rem;
-    }
-}
-
-@media screen and (min-width: 992px) {
-    .bd-grid {
-        margin-left: auto;
-        margin-right: auto;
-    }
-    .home {
-        padding: 10rem 0 2rem;
-        &__img {
-            width: 450px;
-        }
-    }
 }
 
 /*===== BASE =====*/
-*, ::before, ::after {
+*,::before,::after{
     box-sizing: border-box;
 }
-html {
+html{
     scroll-behavior: smooth;
 }
-body {
+body{
     margin: var(--header-height) 0 0 0;
     font-family: var(--body-font);
     font-size: var(--normal-font-size);
     color: var(--second-color);
 }
-h1, h2, h3, h4, h5, h6 {
+h1,h2,p{
+    margin: 0;  
+}
+ul{
     margin: 0;
-}
-a {
-    text-decoration: none;
-}
-ul {
     padding: 0;
-    margin: 0;
     list-style: none;
 }
-section {
-    position: relative;
-    padding-top: var(--header-height);
+a{
+    text-decoration: none;
 }
-.section-title {
-    font-size: var(--big-font-size);
-    font-weight: var(--font-semi);
-    color: var(--second-color);
-    position: relative;
-    padding-bottom: 1rem;
-}
-.section-title::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    height: 2px;
-    background-color: var(--first-color);
+img{
+    max-width: 100%;
+    height: auto;
+    display: block;
 }
 
-/*===== HEADER =====*/
-.l-header {
+/*===== CLASS CSS ===== */
+.section-title{
+    position: relative;
+    font-size: var(--h2-font-size);
+    color: var(--first-color);
+    margin-top: var(--mb-2);
+    margin-bottom: var(--mb-4);
+    text-align: center;
+
+    &::after{
+        position: absolute;
+        content: '';
+        width: 64px;
+        height: 0.18rem;
+        left: 0;
+        right: 0;
+        margin: auto;
+        top: 2rem;
+        background-color: var(--first-color);
+    }
+}
+.section{
+    padding-top: 3rem;
+    padding-bottom: 2rem;
+}
+
+/*===== LAYOUT =====*/
+.bd-grid{
+    max-width: 1024px;
+    display: grid;
+    margin-left: var(--mb-2);
+    margin-right: var(--mb-2);
+}
+.l-header{
+    width: 100%;
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
-    height: var(--header-height);
-    background-color: #fff;
     z-index: var(--z-fixed);
-    display: flex;
-    align-items: center;
-    padding: 0 var(--mb-6);
+    background-color: #fff;
+    box-shadow: 0 1px 4px rgba(146,161,176,.15);
 }
-.nav {
+
+/*===== NAV =====*/
+.nav{
+    height: var(--header-height);
     display: flex;
     justify-content: space-between;
     align-items: center;
-    width: 100%;
-    height: 100%;
-}
-.nav__logo {
-    font-size: 1.5rem;
     font-weight: var(--font-semi);
-    color: var(--second-color);
+
+    &__menu{
+        @media screen and (max-width: 767px){
+            position: fixed;
+            top: var(--header-height);
+            right: -100%;
+            width: 80%;
+            height: 100%;
+            padding: 2rem;
+            background-color: var(--second-color);
+            transition: .5s;
+        }
+    }
+    &__item{
+        margin-bottom: var(--mb-4);
+    }
+    &__link{
+        position: relative;
+        color: #fff;
+
+        &:hover{
+            position: relative;
+
+            &::after{
+                position: absolute;
+                content: '';
+                width: 100%;
+                height: 0.18rem;
+                left: 0;
+                top: 2rem;
+                background-color: var(--first-color);
+            }
+        }
+    }
+    &__logo{
+        color: var(--second-color);
+    }
+    &__toggle{
+        color: var(--second-color);
+        font-size: 1.5rem;
+        cursor: pointer;
+    }
 }
-.nav__toggle {
-    display: none;
-    font-size: 1.5rem;
+/*Active menu*/
+.active::after{
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 0.18rem;
+    left: 0;
+    top: 2rem;
+    background-color: var(--first-color);
 }
-.nav__menu {
-    display: flex;
-    margin: 0;
-    padding: 0;
-}
-.nav__link {
-    color: var(--second-color);
-    font-size: var(--normal-font-size);
-    padding: 1rem;
-    display: block;
-}
-.nav__link:hover {
-    color: var(--first-color);
+
+/*=== Show menu ===*/
+.show{
+    right: 0;
 }
 
 /*===== HOME =====*/
-.home {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 6rem 0;
-}
-.home__data {
-    max-width: 600px;
-}
-.home__title {
-    font-size: var(--big-font-size);
-    color: var(--second-color);
-}
-.home__title-color {
-    color: var(--first-color);
-}
-.home__description {
-    margin: var(--mb-4);
-}
-.home__img {
-    max-width: 100%;
-    border-radius: .75rem;
+.home{
+    position: relative;
+    row-gap: 5rem;
+    padding: 4rem 0 5rem;
+
+    &__data{
+        align-self: center;
+    }
+    &__title{
+        font-size: var(--big-font-size);
+        margin-bottom: var(--mb-5);
+
+        &-color{
+            color: var(--first-color);
+        }
+    }
+    &__social{
+        display: flex;
+        flex-direction: column;
+        &-icon{
+            width: max-content;
+            margin-bottom: var(--mb-2);
+            font-size: 1.5rem;
+            color: var(--second-color);
+
+            &:hover{
+                color: var(--first-color);
+            }
+        }
+    }
+
+    &__img{
+        position: absolute;
+        right: 0;
+        bottom: 0;
+        width: 260px;
+    }
+    &__blob{
+        fill: var(--first-color);
+
+        &-img{
+            width: 360px;
+        }
+    }
 }
 
-/*===== ABOUT =====*/
-.about {
-    text-align: center;
-    padding: var(--mb-4) 0;
-}
-.about__data {
-    margin-bottom: var(--mb-6);
-}
-.about__data-title {
-    font-size: var(--big-font-size);
-}
-.about__text {
-    color: var(--second-color);
-    font-size: var(--normal-font-size);
-}
-.about__img {
-    margin-bottom: var(--mb-6);
-}
-.about__img img {
-    width: 250px;
-    border-radius: 50%;
-}
-
-/*===== SKILLS =====*/
-.skills {
-    padding: var(--mb-4) 0;
-}
-.skills__data {
-    margin-bottom: var(--mb-4);
-}
-.skills__data-title {
-    font-size: var(--big-font-size);
-    font-weight: var(--font-semi);
-}
-.skills__bar {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: var(--mb-2);
-}
-.skills__bar-title {
-    color: var(--second-color);
-}
-.skills__bar-percent {
-    color: var(--first-color);
-}
-.skills__skill {
-    background: rgba(0, 0, 0, .1);
-    border-radius: .75rem;
-    height: .5rem;
-    margin-top: .5rem;
-}
-
-/*===== WORK =====*/
-.work {
-    padding: var(--mb-4) 0;
-}
-.work__container {
-    display: grid;
-    gap: 1rem;
-    grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-}
-.work__img {
-    transition: .3s;
-    border-radius: .75rem;
-}
-.work__img:hover {
-    transform: scale(1.05);
-}
-.work__description {
-    padding: 1rem;
-}
-
-/*===== CONTACT =====*/
-.contact {
-    padding: var(--mb-4) 0;
-}
-.contact__container {
-    display: flex;
-    justify-content: center;
-}
-.contact__form {
-    display: flex;
-    flex-direction: column;
-    max-width: 500px;
-}
-.contact__input,
-.contact__textarea {
-    background: rgba(0, 0, 0, .1);
-    border: none;
-    border-radius: .75rem;
-    padding: 1rem;
-    margin-bottom: var(--mb-4);
-    font-size: var(--normal-font-size);
-    color: var(--second-color);
-}
-.contact__input::placeholder,
-.contact__textarea::placeholder {
-    color: var(--second-color);
-}
-.contact__input {
-    height: 2.5rem;
-}
-.contact__textarea {
-    height: 7rem;
-}
-.contact__button {
-    padding: 1rem;
-    font-size: var(--normal-font-size);
-}
-
-/*===== FOOTER =====*/
-.footer {
-    background-color: var(--second-color);
-    padding: 1rem 0;
-    text-align: center;
+/*BUTTONS*/
+.button{
+    display: inline-block;
+    background-color: var(--first-color);
     color: #fff;
+    padding: .75rem 2.5rem;
+    font-weight: var(--font-semi);
+    border-radius: .5rem; 
+    transition: .3s;
+
+    &:hover{
+        box-shadow: 0px 10px 36px rgba(0,0,0,.15);
+    }
 }
-.footer__social {
-    margin: var(--mb-4);
+
+/* ===== ABOUT =====*/
+.about{
+    &__container{
+        row-gap: 2rem;
+        text-align: center;
+    }
+    &__subtitle{
+        margin-bottom: var(--mb-2);
+    }
+
+    &__img{
+        justify-self: center;
+        
+        & img{
+            width: 200px;
+            border-radius: .5rem;
+        }
+    }
 }
-.footer__social-icon {
-    margin: 0 .5rem;
-    font-size: 1.5rem;
+
+/* ===== SKILLS =====*/
+.skills{
+    &__container{
+        row-gap: 2rem;
+        text-align: center;
+    }
+    &__subtitle{
+        margin-bottom: var(--mb-2);
+    }
+    &__text{
+        margin-bottom: var(--mb-4);
+    }
+    &__data{
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        position: relative;
+        font-weight: var(--font-semi);
+        padding: .5rem 1rem;
+        margin-bottom: var(--mb-4);
+        border-radius: .5rem;
+        box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15);
+    }
+    &__icon{
+        font-size: 2rem;
+        margin-right: var(--mb-2);
+        color: var(--first-color);
+    }
+    &__names{
+        display: flex;
+        align-items: center;
+    }
+    &__bar{
+        position: absolute;
+        left: 0;
+        bottom: 0;
+        background-color: var(--first-color);
+        height: .25rem;
+        border-radius: .5rem;
+        z-index: var(--z-back);
+    }
+    &__html{
+        width: 95%;
+    }
+    &__css{
+        width: 85%;
+    }
+    &__js{
+        width: 65%;
+    }
+    &__ux{
+        width: 85%;
+    }
+    &__img{
+        border-radius: .5rem;
+    }
 }
-.footer__social-icon:hover {
-    color: var(--first-color);
+/* ===== WORK =====*/
+.work{
+    &__container{
+        row-gap: 2rem;
+    }
+    &__img{
+        box-shadow: 0px 4px 25px rgba(14, 36, 49, 0.15); 
+        border-radius: .5rem;
+        overflow: hidden;
+        
+        & img{
+            transition: 1s;
+
+            &:hover{
+                transform: scale(1.1);
+            }
+        }
+    }
 }
+
+/* ===== CONTACT =====*/
+.contact{
+    &__input{
+        width: 100%;
+        font-size: var(--normal-font-size);
+        font-weight: var(--font-semi);
+        padding: 1rem;
+        border-radius: .5rem;
+        border: 1.5px solid var(--second-color);
+        outline: none;
+        margin-bottom: var(--mb-4);
+    }
+    &__button{
+        display: block;
+        border: none;
+        outline: none;
+        font-size: var(--normal-font-size);
+        cursor: pointer;
+        margin-left: auto;
+    }
+}
+
+/* ===== FOOTER =====*/
+.footer{
+    background-color: var(--second-color);
+    color: #fff;
+    text-align: center;
+    font-weight: var(--font-semi);
+    padding: 2rem 0;
+
+    &__title{
+        font-size: 2rem;
+        margin-bottom: var(--mb-4);
+    }
+    &__social{
+        margin-bottom: var(--mb-4);
+    }
+    &__icon{
+        font-size: 1.5rem;
+        color: #fff;
+        margin: 0 var(--mb-2);
+    }
+    &__copy{
+        font-size: var(--smaller-font-size);
+    }
+}
+
+/* ===== MEDIA QUERIES=====*/
+@media screen and (max-width: 320px){
+    .home{
+        row-gap: 2rem;
+
+        &__img{
+            width: 200px;
+        }
+    }
+}
+
+@media screen and (min-width: 576px){
+    .home{
+        padding: 4rem 0 2rem;
+        &__social{
+            padding-top: 0;
+            padding-bottom: 2.5rem;
+            flex-direction: row;
+            align-self: flex-end;
+
+            &-icon{
+                margin-bottom: 0;
+                margin-right: var(--mb-4);
+            }
+        }
+        &__img{
+            width: 300px;
+            bottom: 25%;
+        }
+    }
+
+    .about__container{
+        grid-template-columns: repeat(2,1fr);
+        align-items: center;
+        text-align: initial;
+    }
+
+    .skills__container{
+        grid-template-columns: .7fr;
+        justify-content: center;
+        column-gap: 1rem;
+    }
+
+    .work__container{
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 2rem;
+        padding-top: 2rem;
+    }
+
+    .contact{
+        &__form{
+            width: 360px;
+            padding-top: 2rem ;
+        }
+        &__container{
+            justify-items: center;
+        }
+    }
+}
+
+@media screen and(min-width: 768px){
+    body{
+        margin: 0;
+    }
+    .section{
+        padding-top: 4rem;
+        padding-bottom: 3rem;
+    }
+
+    .section-title{
+        margin-bottom: var(--mb-6);
+
+        &::after{
+            width: 80px;
+            top: 3rem;
+        }
+    }
+
+    .nav{
+        height: calc(var(--header-height) + 1.5rem);
+        &__list{
+            display: flex;
+            padding-top: 0;
+        }
+        &__item{
+            margin-left: var(--mb-6);
+            margin-bottom: 0;
+        }
+        &__toggle{
+            display: none;
+        }
+        &__link{
+            color: var(--second-color);
+        }
+    }
+    .home{
+        padding: 8rem 0 2rem;
+        
+        &__img{
+            width: 400px;
+            bottom: 10%;
+        }
+    }
+
+    .about{
+        &__container{
+           padding-top: 2rem;
+        }
+        &__img{
+            & img{
+                width: 300px;
+            }
+        }
+    }
+    .skills__container{
+        grid-template-columns: repeat(2,1fr);
+        column-gap: 2rem;
+        align-items: center;
+        text-align: initial;
+    }
+    .work__container{
+        grid-template-columns: repeat(3,1fr);
+        column-gap: 2rem;
+    }
+}
+
+@media screen and (min-width: 992px){
+    .bd-grid{
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .home{
+        padding: 10rem 0 2rem;
+
+        &__img{
+            width: 450px;
+        }
+    }
+}
+
