--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,6 +10,7 @@
   --hue-color: 224;
   --first-color: hsl(var(--hue-color), 89%, 60%);
   --second-color: hsl(var(--hue-color), 56%, 12%);
+  --third-color: hsl(var(--hue-color), 89%, 30%);
   /*===== Fuente y tipografia =====*/
   --body-font: 'Poppins', sans-serif;
   --big-font-size: 2rem;
@@ -112,7 +113,7 @@ img {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: #fff;
+  background-color: var(--third-color);
   box-shadow: 0 1px 4px rgba(146, 161, 176, 0.15);
 }
 
@@ -385,77 +386,61 @@ img {
   color: #fff;
   text-align: center;
   font-weight: var(--font-semi);
-  padding: 2rem 0;
+  padding: 1rem 0;
 }
 
 .footer__title {
-  font-size: 2rem;
-  margin-bottom: var(--mb-4);
+  font-size: var(--h2-font-size);
+  margin-bottom: var(--mb-2);
 }
 
 .footer__social {
   margin-bottom: var(--mb-4);
 }
 
-.footer__icon {
+.footer__social a {
   font-size: 1.5rem;
-  color: #fff;
   margin: 0 var(--mb-2);
+  color: #fff;
 }
 
-.footer__copy {
-  font-size: var(--smaller-font-size);
+.footer__social a:hover {
+  color: var(--first-color);
 }
 
-/* ===== MEDIA QUERIES=====*/
-@media screen and (max-width: 320px) {
-  .home {
-    row-gap: 2rem;
-  }
-  .home__img {
-    width: 200px;
-  }
-}
-
+/* ===== MEDIA QUERIES =====*/
 @media screen and (min-width: 576px) {
-  .home {
-    padding: 4rem 0 2rem;
+  .bd-grid {
+    margin-left: auto;
+    margin-right: auto;
   }
-  .home__social {
-    padding-top: 0;
-    padding-bottom: 2.5rem;
-    flex-direction: row;
-    align-self: flex-end;
+
+  .nav__menu {
+    width: 60%;
   }
-  .home__social-icon {
+
+  .nav__item {
     margin-bottom: 0;
-    margin-right: var(--mb-4);
   }
+
+  .nav__list {
+    display: flex;
+  }
+
+  .nav__link {
+    margin-left: var(--mb-5);
+  }
+
   .home__img {
-    width: 300px;
-    bottom: 25%;
+    width: 320px;
   }
-  .about__container {
-    grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    text-align: initial;
+
+  .home__blob-img {
+    width: 420px;
   }
-  .skills__container {
-    grid-template-columns: .7fr;
-    justify-content: center;
-    column-gap: 1rem;
-  }
-  .work__container {
-    grid-template-columns: repeat(2, 1fr);
-    column-gap: 2rem;
-    padding-top: 2rem;
-  }
-  .contact__form {
-    width: 360px;
-    padding-top: 2rem;
-  }
-  .contact__container {
-    justify-items: center;
+
+  .skills__data {
+    padding-right: 1.5rem;
   }
 }
 
@@ -463,68 +448,79 @@ img {
   body {
     margin: 0;
   }
-  .section {
-    padding-top: 4rem;
-    padding-bottom: 3rem;
+
+  .bd-grid {
+    column-gap: 2rem;
   }
-  .section-title {
-    margin-bottom: var(--mb-6);
+
+  .nav__menu {
+    margin-left: auto;
   }
-  .section-title::after {
-    width: 80px;
-    top: 3rem;
-  }
-  .nav {
-    height: calc(var(--header-height) + 1.5rem);
-  }
-  .nav__list {
-    display: flex;
-    padding-top: 0;
-  }
-  .nav__item {
-    margin-left: var(--mb-6);
-    margin-bottom: 0;
-  }
-  .nav__toggle {
-    display: none;
-  }
-  .nav__link {
-    color: var(--second-color);
-  }
+
   .home {
-    padding: 8rem 0 2rem;
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
   }
-  .home__img {
-    width: 400px;
-    bottom: 10%;
+
+  .home__container {
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
   }
+
   .about__container {
-    padding-top: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
   }
-  .about__img img {
-    width: 300px;
-  }
+
   .skills__container {
     grid-template-columns: repeat(2, 1fr);
-    column-gap: 2rem;
+    justify-content: center;
     align-items: center;
-    text-align: initial;
   }
+
   .work__container {
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 2rem;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
   }
 }
 
-@media screen and (min-width: 992px) {
-  .bd-grid {
-    margin-left: auto;
-    margin-right: auto;
+@media screen and (min-width: 1024px) {
+  .home__container {
+    grid-template-columns: repeat(2, 1fr);
   }
-  .home {
-    padding: 10rem 0 2rem;
+
+  .about__container {
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
   }
-  .home__img {
-    width: 450px;
+
+  .skills__container {
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
   }
+
+  .work__container {
+    grid-template-columns: repeat(3, 1fr);
+    justify-content: center;
+  }
+
+  .contact__container {
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+  }
+}
+
+/* Iframe CSS */
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: none;
+  z-index: -1;
 }
