--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,34 +162,60 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
     display: inline-block;
 }
 
-.smooth-menu > ul {
+.smooth-menu .dropdown-content {
     display: none;
     position: absolute;
     background-color: #f9f9f9;
-    min-width: 200px; /* Increase this for more content */
+    min-width: 200px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     z-index: 1000; /* Ensure it's above other elements */
     padding: 10px 0;
     margin: 0;
 }
 
-.smooth-menu:hover > ul {
+.smooth-menu:hover .dropdown-content {
     display: block;
 }
 
-.smooth-menu > ul li {
-    list-style-type: none;
-    padding: 5px 20px;
+/* Style for nested dropdowns */
+.sub-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 200px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1001; /* Higher than main dropdown */
+    margin-left: 100%; /* Position to the right of parent */
+    top: 0;
+    left: 0;
 }
 
-.smooth-menu > ul li a {
+.smooth-menu .dropdown-content li:hover .sub-dropdown-content {
+    display: block;
+}
+
+/* Ensure dropdowns appear on top of each other */
+.smooth-menu .dropdown-content li {
+    position: relative;
+}
+
+.smooth-menu .dropdown-content > li > a {
     color: #333;
     padding: 12px 16px;
     text-decoration: none;
     display: block;
 }
 
-.smooth-menu > ul li a:hover {
+.smooth-menu .dropdown-content > li > a:hover {
+    background-color: #f1f1f1;
+}
+
+.smooth-menu .dropdown-content li .sub-dropdown-content li a {
+    padding: 10px 15px;
+    display: block;
+}
+
+.smooth-menu .dropdown-content li .sub-dropdown-content li a:hover {
     background-color: #f1f1f1;
 }
 
@@ -206,14 +232,23 @@ body {
         background-color: #333;
         color: #f0f0f0;
     }
-    .smooth-menu > ul {
+    .smooth-menu .dropdown-content {
         background-color: #444;
     }
-    .smooth-menu > ul li a {
+    .smooth-menu .dropdown-content > li > a {
         color: #f0f0f0;
     }
-    .smooth-menu > ul li a:hover {
+    .smooth-menu .dropdown-content > li > a:hover {
         background-color: #666;
+    }
+    .smooth-menu .dropdown-content li .sub-dropdown-content {
+        background-color: #555;
+    }
+    .smooth-menu .dropdown-content li .sub-dropdown-content li a {
+        color: #f0f0f0;
+    }
+    .smooth-menu .dropdown-content li .sub-dropdown-content li a:hover {
+        background-color: #777;
     }
 }
 
