--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -192,6 +192,9 @@ nav.navbar.bootsnav .navbar-toggle i{color: #d92cf9;}
 
 .smooth-menu .dropdown-content li:hover .sub-dropdown-content {
     display: block;
+        position: absolute;
+        left: 100%;
+        top: 0;
 }
 
 /* Ensure dropdowns appear on top of each other */
