--- a/styles.css
+++ b/styles.css
@@ -207,6 +207,6 @@ footer {
 .skills h3 {
     font-size: 14px;
     color: #333;
-    margin: 0px 0 0 ;
+    margin: 0 10px ;
     text-align: right;
 }
