--- a/styles.css
+++ b/styles.css
@@ -58,10 +58,13 @@ nav {
     color: white; /* Keep white on hover */
     text-decoration: none; /* Ensure no underline on hover */
 }
-#menu li:nth-child(3) a, /* Assuming Contact is the third list item */
-#menu li:nth-child(4) a { /* Assuming About is the fourth list item */
+
+#menu .no-deco {
+    color: white;
     text-decoration: none;
 }
+
+
 
 .dropdown-content {
     display: none;
